<resources>
    <string name="app_name">Material Request Order</string>
    <string name="user">Ahmad</string>
    <string name="nama_mro">RTP-REQ/062/02.24</string>
    <string name="deskripsi_splash">"Your Reliable Partner for Engineering, Procurement, &amp; Construction Projects"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role_admin">Administrator</string>
    <string name="forget">Reset Password</string>
    <string name="forget1">Keep calm, lets change</string>
    <string name="forget2">your password</string>
    <string name="verify1">We have just sent you a verification</string>
    <string name="verify2">via your email</string>
    <string name="adduser">Add User</string>
    <string name="addproject">Add Project</string>
    <string name="addproduct">Add Product</string>
    <string name="finduser">Find a user</string>
    <string name="fintproduct">Find a product</string>
    <string name="fintproject">Find a project</string>
    <string name="productname">Product Name</string>
    <string name="categoriesproduct">Product Categories</string>
    <string name="unitpoduct">Product Unit</string>
    <string name="project_manager">Project Manager</string>
    <string name="hal1">Hal1</string>
    <string name="next">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="addmro">Add MRO</string>
    <string name="slctrole">Select Role</string>
    <string name="profil">Profil</string>
    <string name="user_adm">Manage User</string>
    <string name="product_adm">Manage Product</string>
    <string name="project_adm">Manage Project</string>
    <string name="role_adm">Administrator</string>
    <string name="user_name">Husain</string>
    <string name="signout">Sign Out</string>
    <string name="mng_user">Manage User</string>
    <string name="mng_product">Manage Product</string>
    <string name="mng_project">Manage Project</string>
    <string name="add_user">Add User</string>
    <string name="add_product">Add Product</string>
    <string name="add_project">Add Project</string>
    <string name="back">back</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Categories</string>
    <string name="product_unit">Product Units</string>
    <string name="project_name">Project Name</string>
    <string name="project_area">Project Area</string>
    <string name="emailuser">husain@gmail.com</string>
    <string name="role_user">Project Manager</string>
    <string name="pj_project">Project Manager</string>
    <string name="admin_project">Admin Project</string>
    <string name="pic">PIC</string>
    <string name="material">Material</string>
    <string name="procurement">Procurement</string>
    <string name="verify">Verification Account</string>
    <string name="search">Seach\n</string>
</resources>