<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileAdministratorFragment"
    android:background="@color/white">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/profil"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true">

        <de.hdodenhof.circleimageview.CircleImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/foto"
            android:layout_width="122dp"
            android:layout_height="120dp"
            android:src="@drawable/empty_photo" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_edit_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/edit_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/namauser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:text="@string/user_name"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_below="@id/cl"/>


    <TextView
        android:id="@+id/roleuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:text="@string/role_adm"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/namauser"/>

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_below="@id/roleuser"
        android:src="@drawable/line"/>

    <LinearLayout
        android:id="@+id/ly_profile_administrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:layout_below="@id/line">

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/profiles"/>

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/user_adm"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">
            <ImageView
                android:id="@+id/img_product"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/product"/>

            <TextView
                android:id="@+id/txt_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/product_adm"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">
            <ImageView
                android:id="@+id/img_project"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/project"/>

            <TextView
                android:id="@+id/txt_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/project_adm"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="3dp"
            android:layout_marginTop="18dp">
            <ImageView
                android:id="@+id/img_out"
                android:layout_width="30sp"
                android:layout_height="30dp"
                android:src="@drawable/signout"/>

            <TextView
                android:id="@+id/txt_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/RedWarning"
                android:textSize="18sp"
                android:text="@string/signout"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>