<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/gambar_login"
        android:layout_width="167dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/gambar_login"
        android:padding="30dp">

        <EditText
            android:id="@+id/edt_email_signin"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"
            android:paddingLeft="15dp"
            android:drawablePadding="7dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppinsregular"
            android:textSize="13sp"
            android:textColorHint="@color/teks"
            android:textColor="@color/SecondaryColor"
            />

        <EditText
            android:id="@+id/edt_pass_signin"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/teks"
            android:inputType="textPassword"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/password"
            android:drawableLeft="@drawable/pass"
            android:paddingLeft="15dp"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:textColor="@color/SecondaryColor"
            />

        <TextView
            android:id="@+id/forgotpass_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly1"
            android:layout_alignRight="@id/edt_pass_signin"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/forget_pass"
            android:textColor="@color/PrimaryColor"
            android:textSize="13sp"
            android:layout_gravity="right"
            />
    </LinearLayout>

<<<<<<< HEAD
    <androidx.appcompat.widget.AppCompatButton
=======
<<<<<<<< HEAD:app/src/main/res/layout/fragment_daftar.xml

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
========
    <Button
>>>>>>> 98c38e7a3aa61f28927d30455ced2a8286c30239
        android:id="@+id/button_login_signin"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:text="@string/sign_in"
<<<<<<< HEAD
        android:layout_below="@id/ly1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/kolom_biru"
        android:width="300dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppinsbold"
        android:textAllCaps="false"
        />
=======
>>>>>>>> 98c38e7a3aa61f28927d30455ced2a8286c30239:app/src/main/res/layout/fragment_sign_in.xml
        android:layout_below="@id/ly1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:width="300dp"
        android:background="@drawable/kolom_biru"
        android:fontFamily="@font/poppinsbold"
        android:text="Daftar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
>>>>>>> 98c38e7a3aa61f28927d30455ced2a8286c30239


</RelativeLayout>